--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="error_title">Kamu sedang dalam mode offline</string>
+    <string name="error_description">Silakan mengaktifkan paket data atau Wi-fi anda agar dapat menggunakan aplikasi ini.</string>
 </resources>
