--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
 
     <string name="error_title">Kamu sedang dalam mode offline</string>
     <string name="error_description">Silakan mengaktifkan paket data atau Wi-fi anda agar dapat menggunakan aplikasi ini.</string>
+
+    <string name="favorite_empty_title">Barang favorite kosong</string>
+    <string name="favorite_empty_description">Tekan tombol hati yang terdapat di kanan atas informasi barang pada barang yang anda suka.</string>
 </resources>
